Database created, Signup backend added

--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -19,7 +19,7 @@
                         <a class="nav-link active" href="#">Signup</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login</a>
+                        <a class="nav-link" href="../login/login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -48,7 +48,7 @@
                     </div>
                 </form>
                 <div class="d-flex justify-content-center mt-3">
-                    <a href="login.html">Already a user? Login</a>
+                    <a href="../login/login.html">Already a user? Login</a>
                 </div>
             </div>
         </div>
