--- a/public/chat/chat.html
+++ b/public/chat/chat.html
@@ -10,24 +10,35 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="container d-flex justify-content-center align-items-center vh-100">
-        <div class="card w-100" style="max-width: 1100px;">
-            <div class="card-header custom-header text-white text-center">
-                <h4>Chat App</h4>
-            </div>
-            <div class="card-body chat-messages overflow-auto" id="chat-messages" style="height: 700px;">
-                <!-- Messages will go here -->
-            </div>
-            <div class="card-footer">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="message-input" placeholder="Type a message...">
-                    <div class="input-group-append">
-                        <button class="btn custom-button text-white" id="send-button">Send</button>
-                    </div>
-                </div>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <div class="container-fluid">
+          <h4 class="text-center mx-auto">Group Chat App</h4>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="../login/login.html">Signout</a>
+            </li>
+          </ul>
         </div>
-    </div>
+      </nav><br>
+
+      <div class="container d-flex justify-content-center align-items-center">
+        <div class="card w-100" style="max-width: 1100px;">
+          <div class="card-header custom-header text-white text-center">
+            <h4 class="mb-0">Messenger</h4>
+          </div>
+          <div class="card-body chat-messages overflow-auto" id="chat-messages" style="height: 700px;">
+            <!-- Chat Messages -->
+          </div>
+          <div class="card-footer">
+            <div class="input-group">
+              <input type="text" class="form-control" id="message-input" placeholder="Type a message...">
+              <div class="input-group-append">
+                <button class="btn custom-button text-white" id="send-button">Send</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.1/axios.min.js"></script>
     <script src="chat.js"></script>
 </body>
