--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -9,21 +9,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../styles.css" />
 </head>
-<body style="margin: 0px">
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-custom">
-            <h4>Group Chat</h4>
-            <div class="collapse navbar-collapse justify-content-center">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Signup</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../login/login.html">Login</a>
-                    </li>
-                </ul>
-            </div>
-        </nav><br>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <div class="container-fluid">
+          <h4 class="text-center mx-auto">Group Chat App</h4>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Signup</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="../signup/signup.html">Login</a>
+            </li>
+          </ul>
+        </div>
+      </nav><br>
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <form onsubmit="signup(event)">
