--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -18,7 +18,7 @@
                 <a class="nav-link active" href="#">Signup</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="../signup/signup.html">Login</a>
+                <a class="nav-link" href="../login/login.html">Login</a>
             </li>
           </ul>
         </div>
