--- a/public/chat/chat.html
+++ b/public/chat/chat.html
@@ -10,35 +10,75 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-custom">
-        <div class="container-fluid">
-          <h4 class="text-center mx-auto">Group Chat App</h4>
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="../login/login.html">Signout</a>
-            </li>
-          </ul>
-        </div>
-      </nav><br>
+  <nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container-fluid">
+      <h4 class="text-center mx-auto">Group Chat App</h4>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="../login/login.html">Signout</a>
+        </li>
+      </ul>
+    </div>
+</nav><br>
 
-      <div class="container d-flex justify-content-center align-items-center">
-        <div class="card w-100" style="max-width: 1100px;">
-          <div class="card-header custom-header text-white text-center">
-            <h4 class="mb-0">Messenger</h4>
-          </div>
-          <div class="card-body chat-messages overflow-auto" id="chat-messages" style="height: 700px;">
-            <!-- Chat Messages -->
-          </div>
-          <div class="card-footer">
-            <div class="input-group">
-              <input type="text" class="form-control" id="message-input" placeholder="Type a message...">
-              <div class="input-group-append">
-                <button class="btn custom-button text-white" id="send-button">Send</button>
-              </div>
-            </div>
-          </div>
+<div class="container d-flex justify-content-center align-items-start">
+    <div class="card w-25">
+        <div class="card-header custom-header text-white text-center">
+            <h4 class="mb-0">Groups</h4>
         </div>
+        <div class="card-body" id="group-list" style="height: 700px;">
+            <!-- Groups will be listed here -->
+        </div>
+        <div class="card-footer text-center">
+            <button class="btn custom-button text-white" id="create-group-button">Create</button>
+        </div>
+    </div>
+    <div class="card w-75">
+        <div class="card-header custom-header text-white text-center">
+            <h4 class="mb-0">Messenger</h4>
+        </div>
+        <div class="card-body chat-messages overflow-auto" id="chat-messages" style="height: 700px;">
+            <!-- Chat Messages -->
+        </div>
+        <div class="card-footer">
+            <div class="input-group">
+                <input type="text" class="form-control" id="message-input" placeholder="Type a message...">
+                <div class="input-group-append">
+                    <button class="btn custom-button text-white" id="send-button">Send</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal for creating a new group -->
+<div class="modal fade" id="create-group-modal" tabindex="-1" role="dialog" aria-labelledby="createGroupModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+      <div class="modal-content">
+          <div class="modal-header d-flex justify-content-center position-relative">
+              <h5 class="modal-title " id="createGroupModalLabel">Create New Group</h5>
+              <button type="button" class="btn-close position-absolute" style="right: 10px;" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form id="create-group-form">
+                  <div class="form-group">
+                      <label for="group-name">Group Name</label>
+                      <input type="text" class="form-control" id="group-name" required>
+                  </div><br>
+                  <div class="form-group">
+                      <label for="group-members">Add Members</label>
+                      <div id="group-members">
+                          <!-- User checkboxes will be appended here by JavaScript -->
+                      </div>
+                  </div><br>
+                  <div class="text-center">
+                    <button type="submit" class="btn custom-button text-white">Create</button>
+                  </div>
+              </form>
+          </div>
       </div>
+  </div>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.1/axios.min.js"></script>
     <script src="chat.js"></script>
 </body>
