--- a/public/signup/signup.html
+++ b/public/signup/signup.html
@@ -34,10 +34,10 @@
                         <label for="email">Enter your email:</label>
                         <input type="email" name="email" id="email" class="form-control" required/>
                     </div><br>
-                    <div class="form-group mb-1">
+                    <!-- <div class="form-group mb-1">
                         <label for="phone">Enter your phone number:</label>
                         <input type="tel" name="phone" id="phone" class="form-control" required/>
-                    </div><br>
+                    </div><br> -->
                     <div class="form-group mb-1">
                         <label for="password">Password:</label>
                         <input type="password" name="password" id="password" class="form-control" required>
