Multimedia chat feature added using aws s3 service

--- a/public/chat/chat.html
+++ b/public/chat/chat.html
@@ -55,6 +55,8 @@
             <div class="input-group">
                 <input type="text" class="form-control" id="message-input" placeholder="Type a message...">
                 <div class="input-group-append">
+                    <input type="file" id="file-input" class="d-none">
+                    <label class="btn custom-button text-white" for="file-input">+</label>
                     <button class="btn custom-button text-white" id="send-button">Send</button>
                 </div>
             </div>
