localhost replaced by ec2 instance ip

--- a/public/chat/chat.html
+++ b/public/chat/chat.html
@@ -169,7 +169,7 @@
 </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.1/axios.min.js"></script>
-    <script src="http://localhost:4000/socket.io/socket.io.js"></script>
+    <script src="http://13.236.146.218:4000/socket.io/socket.io.js"></script>
     <script src="chat.js"></script>
 </body>
 </html>
